// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Schedules page — state matrix > Loading: rail + detail both render skeletons while the list fetch is pending > detail 1`] = `
<aside
  aria-busy="true"
  aria-label="Loading schedule"
  aria-live="polite"
  class="tasks-pane__detail detail-skeleton"
  data-testid="schedule-detail-skeleton"
  role="status"
>
  <div
    aria-hidden="true"
    class="detail-skeleton__inner"
  >
    <span
      class="skeleton detail-skeleton__title"
    />
    <div
      class="detail-skeleton__meta-row"
    >
      <span
        class="skeleton detail-skeleton__chip"
      />
      <span
        class="skeleton detail-skeleton__chip detail-skeleton__chip--wide"
      />
    </div>
    <div
      class="detail-skeleton__body"
    >
      <span
        class="skeleton detail-skeleton__line detail-skeleton__line--long"
      />
      <span
        class="skeleton detail-skeleton__line detail-skeleton__line--med"
      />
      <span
        class="skeleton detail-skeleton__line detail-skeleton__line--short"
      />
      <span
        class="skeleton detail-skeleton__line detail-skeleton__line--med"
      />
    </div>
  </div>
</aside>
`;

exports[`Schedules page — state matrix > No-match: a filter hiding every row renders the 🔍 EmptyState + Clear filters CTA 1`] = `
<div
  class="empty"
  data-testid="schedules-empty-nomatch"
>
  <div
    aria-hidden="true"
    class="empty__icon"
  >
    🔍
  </div>
  <p
    class="empty__title"
  >
    No matches
  </p>
  <p
    class="empty__hint"
  >
    Adjust the filters above to see more schedules, or clear them all.
  </p>
  <button
    class="btn empty__cta"
    data-testid="schedules-empty-nomatch-cta"
    type="button"
  >
    <span>
      Clear filters
    </span>
  </button>
</div>
`;

exports[`Schedules page — state matrix > Zero: empty workspace renders the 📅 EmptyState (New schedule CTA) with the filter chrome still mounted 1`] = `
<div
  class="empty"
  data-testid="schedules-empty-zero"
>
  <div
    aria-hidden="true"
    class="empty__icon"
  >
    📅
  </div>
  <p
    class="empty__title"
  >
    No schedules yet
  </p>
  <p
    class="empty__hint"
  >
    Click 
    <strong>
      New schedule
    </strong>
     to set up a cron-triggered agent run — preview the next fires before you save. Once a schedule exists, use the row menu to edit, pause, resume, or run it immediately.
  </p>
  <button
    class="btn btn--primary empty__cta"
    data-testid="schedules-empty-zero-cta"
    title="Create a new schedule"
    type="button"
  >
    <svg
      aria-hidden="true"
      fill="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 4.5v15m7.5-7.5h-15"
      />
    </svg>
    <span>
      New schedule
    </span>
  </button>
</div>
`;
